--- a/apps/01-2d/index.html
+++ b/apps/01-2d/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<canvas id="canvas" style="width: 100vw; height: 100vh;"></canvas>
 <script src="index.js" type="module"></script>
 </body>
 </html>
