--- a/apps/01-2d/index.html
+++ b/apps/01-2d/index.html
@@ -5,6 +5,34 @@
     <title>Title</title>
 </head>
 <body>
+<script type="notjs" id="fragment-shader">
+    precision mediump float;
+    uniform vec4 u_color;
+
+    void main() {
+        gl_FragColor = u_color;
+    }
+
+</script>
+<script type="notjs" id="vertex-shader">
+    attribute vec2 a_position;
+
+    uniform vec2 u_resolution;
+
+    void main() {
+
+        // [0,1]
+        vec2 zeroToOne = a_position / u_resolution;
+
+        // [0,2]
+        vec2 zeroToTwo = zeroToOne * 2.0;
+
+        // [-1,1]
+        vec2 clipSpace = zeroToTwo - 1.0;
+
+        gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
+    }
+</script>
 <canvas id="canvas" style="width: 100vw; height: 100vh;"></canvas>
 <script src="index.js" type="module"></script>
 </body>
